<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Connectivity">

        <!--
            android:key specifies the key that could be used in the code to read/write values

            android:summaryOff is the summary that is displayed when the value of the CheckBoxPreference is false
            android:summaryOn is the summary shown when the value of the CheckBoxPreference is true
        -->
        <CheckBoxPreference
            android:key="bluetooth_pref"
            android:title="Bluetooth"
            android:defaultValue="false"
            android:summary="Use Bluetooth?"
            android:summaryOff="Why not turn on the Bluetooth?"
            android:summaryOn="Great! Bluetooth on!"/>

        <SwitchPreference
            android:key="rfid_switch"
            android:title="RFID"
            android:summaryOff="Why not turn on RFID?"
            android:summaryOn="Great! RFID on!"/>

        <!--
            Brings up another screen
        -->
        <PreferenceScreen
            android:title="Wi-Fi Settings"
            android:summary="Enter Wi-Fi Details"
            android:key="WiFiSettings">

            <CheckBoxPreference
                android:title="Wi-Fi"
                android:defaultValue="false"
                android:summary="Use WiFi?"
                android:key="allowWiFi" />

            <EditTextPreference
                android:summary="SSID"
                android:title="Enter SSID"
                android:key="SSIDName"
                />

        </PreferenceScreen>
    </PreferenceCategory>

    <!--
        A better approach is to externalize strings, even for keys
    -->

    <PreferenceCategory
        android:key="@string/signal_strength_category_key"
        android:title="@string/signal_strength_title"
        android:summary="@string/signal_strength_summary">

        <ListPreference
            android:key="@string/connectivity_level_key"
            android:title="@string/connectivity_level"
            android:summary="@string/connectivity_summary"
            android:entries="@array/connectivity_options"
            android:entryValues="@array/connectivity_values"
            android:dialogTitle="@string/connectivity_title"
            android:defaultValue="@string/connectivity_level_default" />

    </PreferenceCategory>

</PreferenceScreen>